Fixed CSS h2 element on tablet.

--- a/starter/src/App.css
+++ b/starter/src/App.css
@@ -165,6 +165,10 @@ h1 {
 h2 {
   font-size: 2.75rem; /* var.$heading-size-big */
 
+  @media (max-width: 768px) {
+    font-size: 2rem; /* var.$heading-size-normal */
+  }
+
   @media (max-width: 425px) {
     font-size: 1.75rem; /* var.$heading-size-small */
   }
